fix(table): reduce sticky header z-index, resolves #181

--- a/src/components/reusable/table/table-head.scss
+++ b/src/components/reusable/table/table-head.scss
@@ -7,6 +7,5 @@
 :host([stickyheader]) {
   position: sticky;
   top: 0;
-  z-index: 10;
   background-color: white;
 }
